add css and js files

--- a/index.html
+++ b/index.html
@@ -3,23 +3,11 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <title>title</title>
+    <title>paper rock scissors</title>
+    <link rel=""stylesheet" href="css/main.css">
   </head>
-
   <body>
-    <script>
-      function getComputerChoice() {
-        array = ['Rock', 'Paper', 'Scissors']
-        return randomElement = array[Math.floor(Math.random() * array.length)];
-      }
-      
-      function getPlayerChoice() {
-        const choice = prompt('Enter "paper", "rock", or "scissors"');
-        return choice;
-      }
-
-      console.log(getPlayerChoice())
-    </script>
+    <script src="js/main.js"></script>
   </body>  
 </html>
 
