complete html and css

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       </div>
     </div>
 
-    <p id="action-message">Make your move</p>
+    <p id="action-message">Make your move.</p>
 
     <script src="js/main.js"></script> 
   </body>   
